--- a/Assignment_No_1_AI_Vedant_Kankate.ipynb
+++ b/Assignment_No_1_AI_Vedant_Kankate.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOHkyqasNkWr6LFsOFx099a",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyOHkyqasNkWr6LFsOFx099a"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,13 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      }
-    },
     {
       "cell_type": "markdown",
       "source": [
